feat: add lost api endpoints